--- a/food_ordering_site.css
+++ b/food_ordering_site.css
@@ -71,7 +71,7 @@ ul li a:hover{
 .home::before{
     top: 0px;
     content: '';
-    background: url("food/churros-2188871_1920.jpg") no-repeat center center/cover;
+    background: url("churros-2188871_1920.jpg") no-repeat center center/cover;
     position: absolute;
     width: 100%;
     height: 60%;
@@ -134,7 +134,7 @@ section h1#heading {
     display: flex;
     flex-direction: row;
     width: 30%; */
-    /* background-image: url('food/logo.jpg') no-repeat center center/cover; */
+    /* background-image: url('logo.jpg') no-repeat center center/cover; */
     /* border: 2px solid red; */
     /* width: 1320px; */
     /* height: 600px; */
@@ -142,7 +142,7 @@ section h1#heading {
 .boxx::before{
     top: 283px;
     content: '';
-    background: url("food/chef-1417239_1280.png") no-repeat center center/cover;
+    background: url("chef-1417239_1280.png") no-repeat center center/cover;
     position: absolute;
     width: 100%;
     height: 120%;
@@ -158,7 +158,7 @@ section h1#heading {
 .container2::before{
     top: 338px;
     content: '';
-    background: url("food/img1.jpg") no-repeat center center/cover;
+    background: url("img1.jpg") no-repeat center center/cover;
     position: absolute;
     width: 100%;
     height: 170%;
