--- a/food_ordering_site_chefs.css
+++ b/food_ordering_site_chefs.css
@@ -71,7 +71,7 @@ ul li a:hover{
 .home::before{
     top: 0px;
     content: '';
-    background: url("food/chef-939436_1920.jpg") no-repeat center center/cover;
+    background: url("chef-939436_1920.jpg") no-repeat center center/cover;
     position: absolute;
     width: 100%;
     height: 60%;
@@ -158,7 +158,7 @@ section h1#heading {
 .container2::before{
     top: 338px;
     content: '';
-    background: url("food/parsley-164493_1280.jpg") no-repeat center center/cover;
+    background: url("parsley-164493_1280.jpg") no-repeat center center/cover;
     position: absolute;
     width: 100%;
     height: 110%;
