--- a/food_ordering_site_about.css
+++ b/food_ordering_site_about.css
@@ -72,7 +72,7 @@ ul li a:hover{
 .home::before{
     top: 0px;
     content: '';
-    background: url("food/usa-1249880_1920.jpg") no-repeat center center/cover;
+    background: url("usa-1249880_1920.jpg") no-repeat center center/cover;
     position: absolute;
     width: 100%;
     height: 60%;
@@ -159,7 +159,7 @@ section h1#heading {
 .container2::before{
     top: 338px;
     content: '';
-    background: url("food/about.jpg") no-repeat center center/cover;
+    background: url("about.jpg") no-repeat center center/cover;
     position: absolute;
     width: 100%;
     height: 110%;
