--- a/food_ordering_site.css
+++ b/food_ordering_site.css
@@ -1,6 +1,7 @@
 *{
     margin: 0px;
     padding: 0px;
+    overflow:hidden;
 
 }
 #navbar{
@@ -74,7 +75,7 @@ ul li a:hover{
     background: url("churros-2188871_1920.jpg") no-repeat center center/cover;
     position: absolute;
     width: 100%;
-    height: 70%;
+    height: 100%;
     z-index: -1;
     opacity: 0.7;
 }
